breadcrumb items alignment on tablet fix

--- a/src/components/Breadcrumb/Breadcrumb.scss
+++ b/src/components/Breadcrumb/Breadcrumb.scss
@@ -10,9 +10,6 @@
   @media screen and (min-width: 1025px) {
     padding-bottom: 0;
   }
-  @media screen and (min-width: 768px) and (max-width: 1024px) {
-    padding: 2rem 2rem 0;
-  }
 }
 
 .order-button {
@@ -31,8 +28,10 @@
   }
 }
 
-.breadcrumb {
-  @media screen and (min-width: 768px) and (max-width: 769px) and (orientation: portrait) {
-    display: none;
-  }
+.breadcrumb li {
+  width: 50%;
+}
+
+.columns.is-mobile {
+  align-items: center;
 }
